noinst_LIBRARIES = libtransmit.a
noinst_HEADERS = \
 Connection.h \
 Server.h \
 TransmitClient.h \
 ConnectionManager.h \
 RequestHandler.h \
 Service.h \
 TransmitDefines.h

libtransmit_a_SOURCES = \
 Connection.cpp \
 Server.cpp \
 TransmitClient.cpp \
 ConnectionManager.cpp \
 RequestHandler.cpp \
 Service.cpp

INCLUDES = \
 -I${top_srcdir}/include \
 -I$(top_srcdir)/src \
 -I/home/MPS/boost_1_39_0

MAINTAINERCLEANFILES = Makefile.in
